# kd

./: .gitignore  0_Segmentation.ipynb  1_Segmentaion.ipynb  Follower3_BCFinetune.ipynb  FollowerPreprocess.ipynb  README.md  cnn.py  helper.py  utils_webots.py
example1/controllers/follower/: CMakeLists.txt  follower.c
example1/controllers/follower_py/: follower_py.py  utils_follower.py
example1/controllers/lead/: lead.c
example1/controllers/lead_py/: lead_py.py  utils.py  utils_lead.py
example1/controllers/supervisor/: supervisor.py
example1/controllers/supervisor_paper/: analyze.py  check_falsify_results.py  check_smc_results.py  plot.py  supervisor_paper.py
example1/protos/: BmwX5New.proto
example1/worlds/: world.wbt
example_paper/controllers/lead_py/: __utils__.py  lead_py.py  utils_lead.py
example_paper/controllers/supervisor/: analyze.py  run_falsify_exps.sh  run_smc_exps.sh  supervisor.py
example_paper/protos/: BmwX5New.proto
example_paper/worlds/: .city.wbproj  .city_q.wbproj  .temp.wbproj  .world.wbproj  world.wbt
segment/: 0_UNET.ipynb  UNET.ipynb  model.py  utils.py
